# my_battery_snippets

./: pyproject.toml  test.ipynb
my_package/: __init__.py  battery_passport.py  capacity_soc_soh.py  hppc.py  linear_regression.py  loading_files.py  nn.py  peaks.py  plotting.py  saving_files.py  smoothing_and_derivatives.py  sql.py  test_data_preprocessing.py
my_package.egg-info/: PKG-INFO  SOURCES.txt
